--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,13 @@
     ],
     "require": {
         "php": "^7.4",
-        "illuminate/support": "^7.0|^8.0"
+        "illuminate/support": "^6.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
         "symfony/var-dumper": "^5.0",
-        "orchestra/testbench": "^5.0",
-        "phpunit/phpunit": "^9.0"
+        "orchestra/testbench": "^4.0",
+        "phpunit/phpunit": "^8.0"
     },
     "autoload": {
         "psr-4": {
